# nanos

./: .gitignore  README.md  vetur.config.js
.github/workflows/: backend.yml  frontend.yml
backend/: pyproject.toml  requirements.txt
backend/api/: admin.py  models.py  serializers.py  urls.py  util.py  views.py
backend/api/migrations/: 0001_initial.py  0002_urlshorten_analytics_id.py
backend/backend/: .env.example  settings.py
frontend/: README.md  nuxt.config.js  package.json  windi.config.ts
frontend/.husky/: commit-msg  pre-commit
frontend/components/Form/: Create.vue
frontend/components/Widget/: History.vue  Views.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/pages/analytics/: _id.vue
frontend/plugins/: vuex-persist.ts
frontend/store/: index.ts
